# Dev_CMake1

./: CMakeLists.txt  CMakeSettings.json  CMakeSettings_dart.json  CMakeSettings_ubuntu.json  CMakeSettings_win.json  MyCodeMacros.cmake  MyConfig.cmake  MyConfig_dart.cmake  MyConfig_ubuntu.cmake  MyDartToolchain.cmake  MyLocalImports.cmake  MyPostBuild.cmake  MyPrecompiledHeader.cmake  MySpecial.cmake  README.md  imx8mm-toolchain.cmake  my_install.bat
MyLibrary/: CMakeLists.txt  MyFunction1.cpp  MyFunction1.h
MyLibrary1/: CMakeLists.txt  MyFunction1.cpp  MyLibrary1Config.cmake
MyProgram1/: CMakeLists.txt
MyProgram2/: CMakeLists.txt  main.cpp
MyProgram3/: CMakeLists.txt  main.cpp
MyProgram4/: CMakeLists.txt  main.cpp
MyProject/: CMakeLists.txt  MyClass1.cpp  main.cpp
MyProject1/: CMakeLists.txt  MyClass1.cpp  MyProject1.cpp  MyProject1.h  main.cpp
MySharedLib/: CMakeLists.txt  MyFunction2.cpp  MyFunction2.h
MyStaticLib/: CMakeLists.txt
