cmake_minimum_required (VERSION 3.8)

project (MySharedLib CXX)

my_find_src_files (src_files MySharedLib)
my_find_inc_files (inc_files)
if (MSVC)
   add_library (MySharedLib STATIC ${src_files})
else()
   add_library (MySharedLib SHARED ${src_files})
endif()
my_add_compile_options (MySharedLib)
my_add_pch (MySharedLib)

target_include_directories(MySharedLib PUBLIC ${PROJECT_SOURCE_DIR})

if (MSVC)
   install(FILES ${inc_files} DESTINATION "C:/MyTools/MyLib/include/MySharedLib")
   install(TARGETS MySharedLib DESTINATION "C:/MyTools/MyLib/lib")
elseif(MyTargetType STREQUAL ubuntu)
   install(FILES ${inc_files} DESTINATION "/opt/prime/include/MySharedLib")
   install(TARGETS MySharedLib DESTINATION "/opt/prime/lib")
   my_post_build_copy_lib(MySharedLib)
elseif(MyTargetType STREQUAL beagle)
   install(FILES ${inc_files} DESTINATION "C:/MyTools/MyLib/include/MySharedLib")
   install(TARGETS MySharedLib DESTINATION "C:/MyTools/MyLib/lib")
   my_post_build_scp_lib(MySharedLib)
elseif(MyTargetType STREQUAL dart)
   install(FILES ${inc_files} DESTINATION "${SRC_LINUX_DIR}/gui/local/include/MySharedLib")
   install(TARGETS MySharedLib DESTINATION "${SRC_LINUX_DIR}/gui/local/lib")
   my_post_build_scp_lib(MySharedLib)
endif()
